Issue #2304365 by mgadrat: Fixed error in Rules 'Set workflow value' action when using Workflow Node.
Issue #2323025: Reverted deprecation of Rules Action 'Set a Workflow Field State'.
Issue #2323025: Updated Rules Action 'Set a Workflow Field State'.
Issue #2317877: Fixed regression Fatal error: __clone method called on non-object in workflow.features.inc
Issue #2331969 by LCM: Fixed available transitions for non-author in WorkflowState::getTransitions().
Issue #1988990: Added translatability of Workflow Field.
Issue #1988990: Added translatability of Workflow Field - execute scheduled transitions.
Issue #2338547: Fixed revision_id is not set when executing a Scheduled Transitions.
Issue #2323025: Fixed Rules Action 'Set a Workflow Field State' does not work.
Issue #2274999: Fixing errors when creating an advanced action.
Issue #2295625: Fixed Advanced Actions and VBO Actions.
Issue #2072225: Added hook_help().
Issue #2353955: Fixed caching in workflow_get_workflows_by_type().
Issue #2354649: Reorganized submodules workflow_vbo and workflow_actions.
Issue #2355085: Fixed Error "Workflow 0 cannot be loaded" when operating on node without Workflow.
Issue #2355093: Fixed machine_name of '(creation)' should not be translated.
Issue #2356605 by pianomansam: Fixed warnings when calling workflow_node_current_state()
Issue #2371061: Fixed Notice: Undefined property: FieldCollectionItemEntity:: in WorkflowTransition->getEntity()
Issue #2361051 by minorOffense: Fixed Call to undefined method EntityValueWrapper::getPropertyLanguage()
Issue #2361051 by gstout: Call to undefined method EntityValueWrapper::getPropertyLanguage()
Issue #2382377: Fatal error after disabling workflow_access: Call to undefined function workflow_access() in /entity/entity.module
Issue #2369435: Fixed Notice: Undefined index: group in workflow_actions_trigger_info() (Line 162 of workflow_actions/workflow_actions.module)
